@@ -1,0 +1,26 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:tal="http://xml.zope.org/namespaces/tal"
+     xmlns:metal="http://xml.zope.org/namespaces/metal"
+     metal:use-macro="api.generic_layout.macros['master']">
+
+  <div metal:fill-slot="content">
+    <div metal:use-macro="api.snippets.macros['status_message']"/>
+    <div metal:use-macro="api.snippets.macros['error_message']"/>
+
+    <div class="rightcol">
+      <div metal:use-macro="menu"/>
+    </div>
+
+    <div class="admin_page_body">
+      <h1 class="kscreentitle">Admin Section: Statistics</h1>
+
+      <div class="koverview_body">
+        <p tal:repeat="fn csv_files">
+          <a href="${api.app_url}/statistics/${fn}">${fn}</a>
+        </p>
+      </div>
+    </div>
+
+  </div>
+
+</html>
